--- a/ConsoleApplication1TestGlut/ConsoleApplication1TestGlut.vcxproj.filters
+++ b/ConsoleApplication1TestGlut/ConsoleApplication1TestGlut.vcxproj.filters
@@ -18,75 +18,81 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\CPP Projects\libGraph-master\src\ControlEngine.cpp">
+    <ClCompile Include="src\ControlEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\libGraph-master\src\Engine.cpp">
+    <ClCompile Include="src\Engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\libGraph-master\src\GameEngine.cpp">
+    <ClCompile Include="src\GameEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\libGraph-master\src\GraphicEngine.cpp">
+    <ClCompile Include="src\GraphicEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\libGraph-master\src\GraphicPrimitives.cpp">
+    <ClCompile Include="src\GraphicPrimitives.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\libGraph-master\src\main.cpp">
+    <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\libGraph-master\src\TextureManager.cpp">
+    <ClCompile Include="src\MyControlEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\proj3\uselibgraph\src\Papillon.cpp">
+    <ClCompile Include="src\MyGameEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\proj3\uselibgraph\src\MyControlEngine.cpp">
+    <ClCompile Include="src\MyGraphicEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\proj3\uselibgraph\src\MyGameEngine.cpp">
+    <ClCompile Include="src\Papillon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CPP Projects\proj3\uselibgraph\src\MyGraphicEngine.cpp">
+    <ClCompile Include="src\TextureManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Fourmi.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\CPP Projects\libGraph-master\src\ControlEngine.h">
+    <ClInclude Include="src\ControlEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\libGraph-master\src\Engine.h">
+    <ClInclude Include="src\Engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\libGraph-master\src\GameEngine.h">
+    <ClInclude Include="src\GameEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\libGraph-master\src\GraphicEngine.h">
+    <ClInclude Include="src\GraphicEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\libGraph-master\src\GraphicPrimitives.h">
+    <ClInclude Include="src\GraphicPrimitives.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\libGraph-master\src\libGraphicInclude.h">
+    <ClInclude Include="src\libGraphicInclude.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\libGraph-master\src\Stopwatch.h">
+    <ClInclude Include="src\MyControlEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\libGraph-master\src\TextureManager.h">
+    <ClInclude Include="src\MyGameEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\proj3\uselibgraph\src\Papillon.h">
+    <ClInclude Include="src\MyGraphicEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\proj3\uselibgraph\src\MyControlEngine.h">
+    <ClInclude Include="src\Papillon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\proj3\uselibgraph\src\MyGameEngine.h">
+    <ClInclude Include="src\Stopwatch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\CPP Projects\proj3\uselibgraph\src\MyGraphicEngine.h">
+    <ClInclude Include="src\TextureManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fourmi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
